<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tabFragments.SettingFragment"
    android:paddingTop="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_margin="16dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_kg"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intake_goal"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/intakeGoalUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_intake_goal"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/languageSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="#ccc"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_data"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_margin="16dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/genderSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_weight"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/genderWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wake_up_time"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/wake_upTimeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_wake_up_time"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bedtime"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/bedTimeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_bedtime"
                android:textSize="20sp"
                android:textColor="@color/secondaryAccentColor"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="#ccc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_settings"
            android:textStyle="bold"
            android:textSize="21sp"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/reminderSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_schedule"
            android:textSize="20sp"
            android:layout_margin="12dp"/>
        <TextView
            android:id="@+id/reminderSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_sound"
            android:layout_margin="12dp"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>